--- a/Day13/nav-challenge/index.html
+++ b/Day13/nav-challenge/index.html
@@ -8,27 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header> 
         <div class="container row">
-            <div class="logo">
-                <a href="#">
-                    <img src="./img/logo.svg" alt="logo">
-                </a>
-            </div>
+            <button class="nav-toggle" aria-label="open navigation">
+                <span class="hamburger"></span>
+            </button>
+            <a class="logo" href="#">
+                <img src="img/logo.svg" alt="layouts">
+            </a>
             <nav class="nav">
-                <ul class="nav__list nav-list--primary">
+                <ul class="nav__list nav__list--primary">
                     <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
                 </ul>
-                <ul class="nav__list">
-                    <li class="nav__item nav-ietm--pushright"><a href="#" class="nav__link">Sign In</a></li>
+                <ul class="nav__list nav__list--secondary">
+                    <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
                     <li class="nav__item"><a href="#" class="nav__link nav__link--button">Sign up</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
+    
     <section class="hero">
         <div class="container row">
             <div class="hero__text">
@@ -36,18 +37,16 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <a href="#" class="btn">I want to learn</a>
             </div>
-            <div class="hero__img">
-                <img src="img/hero-img.jpg" alt="UX design sketches" >
-            </div>
+            <img src="img/hero-img.jpg" alt="UX design sketches" class="hero__img">
         </div>
     </section> 
 
     <main class="main container row">
-            <div class="primary-content">
+            <section class="primary-content">
                 <h2 class="section-title">Quality designs made custom, on demand, just for you</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
+            </section>
             <aside class="sidebar">
                 <h2 class="sidebar-title">Cheap</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -60,7 +59,7 @@
             </aside>
     </main>
 
-    
+    <script src="main.js"></script>
 
 </body>
 </html>
